<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

  <!-- Golden Retriever Image -->
  <ImageView
      android:id="@+id/goldenRetrieverImageView"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:scaleType="centerCrop"
      android:src="@drawable/bggold"
      android:contentDescription="@string/golden_retriever_image_desc"
      android:background="@drawable/trans"
      android:elevation="8dp"
      android:transitionName="goldenRetrieverImageTransition" />

  <!-- Golden Retriever Breed Name -->

  <!-- Golden Retriever Breed Description -->
  <TextView
      android:id="@+id/goldenRetrieverNameTextView"
      android:layout_width="176dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/goldenRetrieverImageView"
      android:layout_marginTop="17dp"
      android:text="@string/golden_retriever_breed_name"
      android:textColor="@color/black"
      android:textSize="28sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/goldenRetrieverDescriptionTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/goldenRetrieverNameTextView"
      android:text="@string/golden_retriever_description"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:lineSpacingMultiplier="1.3"
      android:layout_marginTop="16dp" />

  <!-- Button for Characteristics -->
  <!-- Characteristics Description Box -->
  <Button
      android:id="@+id/characteristicsButton"
      android:layout_width="wrap_content"
      android:layout_height="65dp"
      android:layout_below="@id/goldenRetrieverDescriptionTextView"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:backgroundTint="#000000"
      android:foregroundTint="#FFFFFF"
      android:textColor="#FFFFFF"
      android:layout_marginStart="75dp"
      android:layout_marginTop="34dp"
      android:layout_marginEnd="92dp"
      android:layout_marginBottom="48dp"
      android:text="@string/characteristics_button_label" />

  <TextView
      android:id="@+id/characteristicsTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/characteristicsButton"
      android:layout_marginTop="16dp"
      android:visibility="gone"
      android:text="@string/golden_retriever_characteristics"
      android:textColor="@color/black"
      android:textSize="16sp" />

</RelativeLayout>
