<?xml version="1.0" encoding="utf-8"?>
<!-- activity_shiba.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Shiba Inu Image -->
    <ImageView
        android:id="@+id/shibaImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgshiba"
        android:contentDescription="@string/shiba_image_desc"
        android:background="@drawable/trans"
        android:elevation="8dp"
        android:transitionName="shibaImageTransition" />

    <!-- Shiba Inu Breed Name -->

    <!-- Shiba Inu Breed Description -->
    <TextView
        android:id="@+id/shibaNameTextView"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/shibaImageView"
        android:layout_marginTop="17dp"
        android:text="@string/shiba_breed_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/shibaDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shibaNameTextView"
        android:text="@string/shiba_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:lineSpacingMultiplier="1.3"
        android:layout_marginTop="16dp" />

    <!-- Button for Characteristics -->
    <!-- Characteristics Description Box -->

    <Button
        android:id="@+id/characteristicsButton"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:layout_below="@id/shibaDescriptionTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="68dp"
        android:text="Proceed" />

    <TextView
        android:id="@+id/characteristicsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/characteristicsButton"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/shiba_characteristics"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>
