<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Bull">

    <!-- Bulldog Image -->
    <ImageView
        android:id="@+id/bulldogImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/trans"
        android:contentDescription="@string/bulldog_image_desc"
        android:elevation="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgbull"
        android:transitionName="bulldogImageTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Bulldog Breed Name -->

    <!-- Bulldog Breed Description -->

    <!-- Button for Characteristics -->
    <!-- Characteristics Description Box -->

    <TextView
        android:id="@+id/bulldogNameTextView"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bulldogImageView"
        android:text="@string/bulldog_breed_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/bulldogDescriptionTextView"
        android:layout_width="378dp"
        android:layout_height="219dp"
        android:layout_below="@id/bulldogNameTextView"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/bulldog_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/characteristicsButton"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_below="@id/bulldogDescriptionTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#000000"
        android:foregroundTint="#FFFFFF"
        android:text="Proceed"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/characteristicsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/characteristicsButton"
        android:layout_marginTop="16dp"
        android:text="@string/bulldog_characteristics"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
